[gd_scene load_steps=4 format=3 uid="uid://cx7eqqigwaucc"]

[ext_resource type="Material" uid="uid://bowg6rfuo73kb" path="res://practice_solutions/L8.P1.pick_your_character/assets/practice_background_material.tres" id="1_h0mlx"]
[ext_resource type="Theme" uid="uid://cfwqt5h4pl0p5" path="res://practice_solutions/L8.P1.pick_your_character/assets/practice_exercises_theme.tres" id="2_x0e4q"]
[ext_resource type="Script" path="res://practice_solutions/L8.P1.pick_your_character/pick_your_character.gd" id="4_0gdl1"]

[node name="PickYourPlayer" type="ColorRect"]
material = ExtResource("1_h0mlx")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_x0e4q")
script = ExtResource("4_0gdl1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.164
anchor_right = 1.0
anchor_bottom = 0.836
offset_left = 470.0
offset_top = -75.12
offset_right = -470.0
offset_bottom = 85.12
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="TextureRect" type="TextureRect" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
expand_mode = 1
stretch_mode = 5

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="ButtonDani" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Dani"

[node name="ButtonGobot" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Gobot"

[node name="ButtonNova" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Nova"
